# XLang

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml
LSP/: .vscodeignore  Cargo.toml  README.md  justfile  package-lock.json  package.json  pnpm-lock.yaml  rolldown.config.mjs
LSP/client/: pnpm-lock.yaml
LSP/client/src/: extension.ts
LSP/scripts/: smoke_test.ps1  smoke_test.py
LSP/src/: main.rs
LSP/syntaxes/: xlang.tmLanguage.json
compiler/: Cargo.toml  build.rs
compiler/src/: ast.rs  compile.rs  diagnostic.rs  lexer.rs  lib.rs  llvm_windows_shim.rs  lsp.rs  main.rs  modules.rs  parser.rs  token.rs  typeck.rs
docs/compiler/: v0.1-architecture.md
docs/releases/: v0.1.md  v0.2.md  v0.3.md  v0.4.md  v0.5.md  v0.6.md  v0.7.md
docs/rfcs/: RFC-0001-vision-philosophy-and-non-goals.md  RFC-0002-syntax-principles.md  RFC-0003-mvp-compiler-roadmap.md  RFC-0004-lexical-grammar.md  RFC-0005-concrete-grammar-ebnf.md  RFC-0006-llvm-ir-lowering-rules.md  RFC-0007-variables-mutability-and-assignment.md  RFC-0008-primitive-types.md  RFC-0009-expressions-and-operator-precedence.md  RFC-0010-statements-and-blocks.md  RFC-0011-functions-and-calling-conventions.md  RFC-0012-modules-and-imports.md  RFC-0013-diagnostics-and-error-codes.md  RFC-0014-v0-2-roadmap-and-scope.md  RFC-0015-while-loops-break-and-continue.md  RFC-0016-fixed-size-arrays.md  RFC-0017-index-expressions-and-bounds-checking.md  RFC-0018-v0-3-roadmap-and-scope.md  (+25 more)
examples/: invalid_division_by_zero.x  invalid_immutable_assignment.x  invalid_missing_semicolon.x  main.x  struct_declarations.x
(+35 files in other folders)
