[package]
name = "xlang-language-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "xlang-language-server"
path = "src/main.rs"

[dependencies]
x = { path = "../compiler" }
env_logger = "0.11.5"
crop = "0.4"
serde_json = "1.0.78"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.20.0", features = ["proposed"] }
dashmap = "6.1.0"
log = "0.4.14"
